sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/Competitor_Profile__c.object-meta.xml
<CustomObject>
    <description>Profiles of competing toilets</description>
    <label>Competitor Profile</label>
    <nameField>
        <label>Competitor Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>