sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Additional_rent_for_toilet__c.field-meta.xml
<CustomField>
    <fullName>Additional_rent_for_toilet__c</fullName>
    <description>If in a Plot, Is rent relatively higher than other plots in area?</description>
    <label>Additional rent for plot toilet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>