sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Approximate_customers_per_day__c.field-meta.xml
<CustomField>
    <fullName>Approximate_customers_per_day__c</fullName>
    <description>Approximate number of customers per day</description>
    <label>Approximate customers per day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>Over 250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>