sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Attendant_on_site__c.field-meta.xml
<CustomField>
    <fullName>Attendant_on_site__c</fullName>
    <label>Attendant on-site?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always there</fullName>
            </value>
            <value>
                <fullName>Comes to check/clean only</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>