sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Closings_due_to_lack_of_water__c.field-meta.xml
<CustomField>
    <fullName>Closings_due_to_lack_of_water__c</fullName>
    <label>Closings due to lack of water</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_toilet__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Once a week</fullName>
            </value>
            <value>
                <fullName>More than Once a Week</fullName>
            </value>
            <value>
                <fullName>&gt;4 days in a month</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>