sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Cost_of_memberships__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_memberships__c</fullName>
    <description>If they offer a membership, how much does it cost?</description>
    <inlineHelpText>If they offer a membership, how much does it cost?</inlineHelpText>
    <label>Cost of memberships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>