sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Is_the_toilet_open_year_round__c.field-meta.xml
<CustomField>
    <fullName>Is_the_toilet_open_year_round__c</fullName>
    <label>Is the toilet open year round?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, without problems</fullName>
            </value>
            <value>
                <fullName>Yes, but difficult to access during rains</fullName>
            </value>
            <value>
                <fullName>No, closes during rainy season</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>