sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Competitor Profiles</relationshipLabel>
    <relationshipName>Competitor_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>