sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Number_of_toilets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_toilets__c</fullName>
    <description>Number of toilets in this particular location</description>
    <label>Number of toilets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>More than four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>