sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Opening_hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_hours__c</fullName>
    <label>Opening hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All day + All night</fullName>
            </value>
            <value>
                <fullName>Till Late [10pm]</fullName>
            </value>
            <value>
                <fullName>All day[6.00am-6.00pm]</fullName>
            </value>
            <value>
                <fullName>Other timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>