sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Services_offered__c.field-meta.xml
<CustomField>
    <fullName>Services_offered__c</fullName>
    <description>Services offered at the toilet site</description>
    <inlineHelpText>Select the services offered at the toilet site</inlineHelpText>
    <label>Services offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quality tissue paper</fullName>
            </value>
            <value>
                <fullName>Hand washing [Soap &amp; water]</fullName>
            </value>
            <value>
                <fullName>Sanitary Napkin Bins</fullName>
            </value>
            <value>
                <fullName>Improvised tissue paper</fullName>
            </value>
            <value>
                <fullName>Showers</fullName>
            </value>
            <value>
                <fullName>Goods &amp; Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>