sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Sewer_connection_cost__c.field-meta.xml
<CustomField>
    <fullName>Sewer_connection_cost__c</fullName>
    <label>Monthly cost of sewer connection</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>