sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>Date that survey was conducted or the information was gathered</description>
    <inlineHelpText>Please enter the date the survey was conducted or the information was gathered</inlineHelpText>
    <label>Survey Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>