sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Toilet_cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Toilet_cleanliness__c</fullName>
    <label>Toilet cleanliness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very clean (No smell, flies, feces around)</fullName>
            </value>
            <value>
                <fullName>Somehow clean</fullName>
            </value>
            <value>
                <fullName>Very Dirty (Smelly, full, flies, feces)</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>