sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Toilet_construction_cost__c.field-meta.xml
<CustomField>
    <fullName>Toilet_construction_cost__c</fullName>
    <label>Cost of constructing EACH toilet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>