sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Toilet_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Ownership__c</fullName>
    <label>Toilet Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Plot (Within)</fullName>
            </value>
            <value>
                <fullName>Plot (Outside)</fullName>
            </value>
            <value>
                <fullName>Community Group</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Church/Community Institution</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>