sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Type_of_toilet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_toilet__c</fullName>
    <label>Type of toilet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pit Latrine</fullName>
            </value>
            <value>
                <fullName>Water Based Toilet</fullName>
            </value>
            <value>
                <fullName>Dry Toilet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>