sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Usage_charge_for_adults__c.field-meta.xml
<CustomField>
    <fullName>Usage_charge_for_adults__c</fullName>
    <description>Usage charge for adults per use</description>
    <label>Usage charge for adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>