sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Usage_charge_for_children__c.field-meta.xml
<CustomField>
    <fullName>Usage_charge_for_children__c</fullName>
    <description>Usage charge for children per use</description>
    <label>Usage charge for children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>