sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Waste_collection_cost__c.field-meta.xml
<CustomField>
    <fullName>Waste_collection_cost__c</fullName>
    <label>Cost per waste collection</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>