sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Waste_Collection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Waste_Collection_Frequency__c</fullName>
    <label>Frequency of waste collection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Waste_collection_method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Rarely</fullName>
            </value>
            <value>
                <fullName>Not applicable [connected to sewer line]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>