sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Waste_collection_method__c.field-meta.xml
<CustomField>
    <fullName>Waste_collection_method__c</fullName>
    <label>Waste collection method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Emptied to River</fullName>
            </value>
            <value>
                <fullName>Exhaust truck</fullName>
            </value>
            <value>
                <fullName>Emptied to sewer line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>