sfSandBoxCode/force-app/main/default/objects/Competitor_Profile__c/fields/Water_price__c.field-meta.xml
<CustomField>
    <fullName>Water_price__c</fullName>
    <label>Price of 20L of water if sold at site</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>